fix(#3): try fix inputs on ios

--- a/src/ui-kit/form/form.module.css
+++ b/src/ui-kit/form/form.module.css
@@ -126,6 +126,11 @@
 .input:hover {
   border: 1px solid var(--transparent-blue-primary);
 }
+.input:focus-within {
+  outline: none;
+  border: none;
+  background-color: none;
+}
 .input:focus {
   outline: none;
   border: none;
@@ -143,6 +148,8 @@
   border: 1px solid var(--transparent-blue-primary);
   background-color: #EDEFF1;
 }
+
+
 
 
 .input option {
